[gd_scene load_steps=5 format=3 uid="uid://cbbk768c7hn5u"]

[ext_resource type="Script" path="res://script/attack.gd" id="1_iatoy"]
[ext_resource type="Texture2D" uid="uid://bejjy0yrwnie7" path="res://texture/fire fire.png" id="2_xyc5r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p8pju"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_pf10v"]
b = Vector2(100, 0)

[node name="PlayerAttack" type="Node2D"]
script = ExtResource("1_iatoy")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1e-05, 1e-05)

[node name="FireCollision" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PackedVector2Array(0, 0, 0, 25, 25, 0)
disabled = true

[node name="FireFireImage" type="Sprite2D" parent="Area2D"]
position = Vector2(25, 25)
texture = ExtResource("2_xyc5r")

[node name="EarthArea" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_p8pju")
disabled = true

[node name="LightningCollision" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("SegmentShape2D_pf10v")
disabled = true
one_way_collision_margin = 1.2
